--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                 </div>
             </div>
         </div>
+        <div class="videoWrap"><iframe src="https://youtu.be/HRrAsrqNxP4" width="560" height="315"></iframe></div>
     </header>
 
     <!-- Portfolio Grid Section -->
@@ -123,36 +124,7 @@
                         <img src="img/portfolio/circus.png" class="img-responsive" alt="Circus tent">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="Game controller">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="Safe">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="Submarine">
-                    </a>
-                </div>
+
             </div>
         </div>
 
@@ -169,17 +141,24 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>freelancer programmer, Can use JavaScript, C#, Unity. If you need me, You can use "Contact" tap and Send message to me</p>
+                    <p>freelancer programmer, Can use JavaScript, C#, Unity. If you need me, You can use "Contact" tap and Send message to me.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                    <p>Can game level design. Support AOS, FPS, Sandbox, ETC. If you need Level disigner, You can write "Contact" in "message" to "need game disigner"</p>
                 </div>
+                <br> <br>
+
                 <div class="col-lg-8 col-lg-offset-2 text-center">
+
+                      <p>This webpage made by startbootstrap.</p>
+                      <hr class="star-light">
+
                     <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                        <i class="fa fa-download"></i>  Download Startbootstrap
                     </a>
                 </div>
             </div>
+
         </div>
     </section>
 
@@ -369,10 +348,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>환경을 살리려는 노력</h2>
+                            <h2>Tic-Tac-To!</h2>
                             <hr class="star-primary">
-                            <div class="videoWrap"><iframe src="https://youtu.be/HRrAsrqNxP4" width="560" height="315"></iframe></div>
-                            <h>코로나 19의 역설, 들어보셨나요? 코로나로 인해 황폐했던 생태계가 복원되고 있습니다. 환경을 생각하는 마음이 없다면, 머지않아 지군느 살 수 없는 행성이 될지도 모릅니다. 일상 속에서도 끊임없이 환경을 생각하는 마음을 가져야 합니다.</h><br>
+                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
+                            <h>This TicTacTo game made by JavaScript.<br><a href="tic-tac-to\Main.html">go to game</a></h><br>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
