--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <p>서울 서대문구
+                            <br>세검정로 1길, 95</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -243,7 +243,7 @@
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <p>Freelance is a free to work, Get pay to work. there are un-reguler worker, so don't work at company.</p>
                     </div>
                 </div>
             </div>
